Edit the readme file and put some images

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "commands": [
       {
         "command": "clean-architecture-scaffolding.createNewFeature",
-        "title": "New Feature"
+        "title": "Clean Arch Scaffolding > New Feature"
       }
     ]
   },
