--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "displayName": "Clean Architecture Scaffolding",
   "description": "Generate folder structure for features in Flutter projects",
   "publisher": "euclidesgc",
+  "icon": "icon.png",
   "homepage": "https://www.linkedin.com/in/euclidesgc/",
   "author": {
     "name": "Euclides Guedes Catunda",
     "email": "euclides.catunda@gmail.com",
     "url": "https://www.linkedin.com/in/euclidesgc/"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/euclidesgc/clean-architecture-scaffolding"
