--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "email": "euclides.catunda@gmail.com",
     "url": "https://www.linkedin.com/in/euclidesgc/"
   },
-  "version": "0.0.3",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/euclidesgc/clean-architecture-scaffolding"
@@ -41,21 +41,19 @@
           "scaffolding.layers.templates": {
             "type": "array",
             "default": [
-              "{{custom_folder}}/{{feature_name}}/domain/usecases/{{usecase_name.snakeCase}}.template",
-              "{{custom_folder}}/{{feature_name}}/domain/usecases/{{usecase_name.snakeCase}}_usecase.template",
-              "{{custom_folder}}/{{feature_name}}/domain/entities/",
-              "{{custom_folder}}/{{feature_name}}/domain/repositories/",
-              "{{custom_folder}}/{{feature_name}}/domain/errors/",
-              "{{custom_folder}}/{{feature_name}}/data/datasources/",
-              "{{custom_folder}}/{{feature_name}}/data/models/",
-              "{{custom_folder}}/{{feature_name}}/data/repositories/",
-              "{{custom_folder}}/{{feature_name}}/presentation/pages/",
-              "{{custom_folder}}/{{feature_name}}/presentation/pages/widgets/",
-              "{{custom_folder}}/{{feature_name}}/presentation/pages/{{feature_name}}_bloc"
+              "{{root_folder}}/lib/src/{{feature_name}}/domain/usecases/{{usecase_name.snakeCase}}.template",
+              "{{root_folder}}/lib/src/{{feature_name}}/domain/repositories/{{usecase_name.snakeCase}}_repository.template",
+              "{{root_folder}}/lib/src/{{feature_name}}/domain/errors",
+              "{{root_folder}}/lib/src/{{feature_name}}/domain/entities",
+              "{{root_folder}}/lib/src/{{feature_name}}/infrastructure/repositories/{{usecase_name.snakeCase}}_repository_impl.template",
+              "{{root_folder}}/lib/src/{{feature_name}}/infrastructure/datasources/{{usecase_name.snakeCase}}_datasource.template",
+              "{{root_folder}}/lib/src/{{feature_name}}/data/models",
+              "{{root_folder}}/lib/src/{{feature_name}}/data/datasources/{{usecase_name.snakeCase}}_datasource_impl.template",
+              "{{root_folder}}/lib/src/{{feature_name}}/presentation/pages",
+              "{{root_folder}}/lib/src/{{feature_name}}/presentation/widgets"
             ],
-            "markdownDescription": "#### **An array os string with the templates of your layers.**\nYou can use some keywords to indicates special locations:\n- **{root_folder}** to '/lib';\n- **{custom_folder}** to clicked folder;\n- **{feature_name}** to use the given custom name. \n\n\nEx: '{root_folder}/{feature_name}/domain/usecases/'"
+            "markdownDescription": "#### **An array os string with the templates of your layers.**\nYou can use some keywords to indicates special locations and names:\n - **{{package_name}}** to get the name of package in pubspeck.yaml file;\n - **{{root_folder}}** to './';\n - **{{custom_folder}}** to clicked folder;\n - **{{feature_name}}** to use the given custom name.\n\n\nEx: '{{root_folder}}/lib/src/{{feature_name}}/domain/errors'"
           }
-          
         }
       }
     ],
@@ -64,24 +62,24 @@
         {
           "when": "explorerResourceIsFolder && dart-code:anyFlutterProjectLoaded && dart-code:isRunningLocally",
           "command": "clean-architecture-scaffolding.createFolders",
-          "group": "clean_architecture_scaffolding"
+          "group": "1_clean_architecture_scaffolding@1"
         },
         {
           "when": "explorerResourceIsFolder && dart-code:anyFlutterProjectLoaded && dart-code:isRunningLocally && resourcePath =~ /.*([uU][sS][eE][-_]*[cC][aA][sS][eE][sS]?)$/",
           "command": "clean-architecture-scaffolding.createUsecase",
-          "group": "clean_architecture_scaffolding"
+          "group": "1_clean_architecture_scaffolding@1"
         }
       ]
     },
     "commands": [
       {
         "command": "clean-architecture-scaffolding.createFolders",
-        "title": "Clean Arch Scaffolding -> Create Folders",
+        "title": "Clean Arch Scaffolding.: Create folders",
         "category": "Clean Arch Scaffolding"
       },
       {
         "command": "clean-architecture-scaffolding.createUsecase",
-        "title": "Clean Arch Scaffolding -> New Usecase",
+        "title": "Clean Arch Scaffolding.: New usecase",
         "category": "Clean Arch Scaffolding"
       }
     ]
