--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "email": "euclides.catunda@gmail.com",
     "url": "https://www.linkedin.com/in/euclidesgc/"
   },
-  "version": "0.0.4",
+  "version": "0.0.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/euclidesgc/clean-architecture-scaffolding"
@@ -52,7 +52,7 @@
               "{{root_folder}}/lib/src/{{feature_name}}/presentation/pages",
               "{{root_folder}}/lib/src/{{feature_name}}/presentation/widgets"
             ],
-            "markdownDescription": "#### **An array os string with the templates of your layers.**\nYou can use some keywords to indicates special locations and names:\n - **{{package_name}}** to get the name of package in pubspeck.yaml file;\n - **{{root_folder}}** to './';\n - **{{custom_folder}}** to clicked folder;\n - **{{feature_name}}** to use the given custom name.\n\n\nEx: '{{root_folder}}/lib/src/{{feature_name}}/domain/errors'"
+            "markdownDescription": "#### You can use this special keywords to indicates some locations:\n- **{{package_name}}** to get name of your package in pubspec.yaml file;\n- **{{root_folder}}** to first folder of your projetc;\n- **{{custom_folder}}** to clicked folder;\n- **{{feature_name}}** to use the given custom name;\n- **{{usecase_name}}** to use a given usecase name;\n\n #### And you can associate this keywords with this format pattern too as given below:\n- **{{usecase_name.lowerCase}}** to use a given usecase name with lowercase pattern;\n- **{{usecase_name.upperCase}}** to use a given usecase name with UPPERCASE pattern;\n- **{{usecase_name.snakeCase}}** to use a given usecase name with snake_case pattern (indicate to file path names);\n- **{{usecase_name.pascalCase}}** to use a given usecase name with PascalCase pattern (indicate to Class names);\n- **{{usecase_name.camelCase}}**  to use a given usecase name with camelCase pattern (indicate to variables names).\n\n **Ex:** '{{root_folder}}/lib/src/{{feature_name}}/domain/entities'"
           }
         }
       }
