--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "email": "euclides.catunda@gmail.com",
     "url": "https://www.linkedin.com/in/euclidesgc/"
   },
-  "version": "0.0.8",
+  "version": "0.0.9",
   "repository": {
     "type": "git",
     "url": "https://github.com/euclidesgc/clean-architecture-scaffolding"
@@ -108,6 +108,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "axios": "^1.1.0",
     "change-case": "^4.1.2",
     "lodash": "^4.17.21"
   }
