--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "axios": "^1.1.0",
     "change-case": "^4.1.2",
     "lodash": "^4.17.21"
   }
