template folders should ends with /

--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
             "default": [
               "{{root_folder}}/lib/src/{{feature_name}}/domain/usecases/{{usecase_name.snakeCase}}_usecase.template",
               "{{root_folder}}/lib/src/{{feature_name}}/domain/repositories/{{usecase_name.snakeCase}}_repository.template",
-              "{{root_folder}}/lib/src/{{feature_name}}/domain/errors",
-              "{{root_folder}}/lib/src/{{feature_name}}/domain/entities",
+              "{{root_folder}}/lib/src/{{feature_name}}/domain/errors/",
+              "{{root_folder}}/lib/src/{{feature_name}}/domain/entities/",
               "{{root_folder}}/lib/src/{{feature_name}}/infrastructure/repositories/{{usecase_name.snakeCase}}_repository_impl.template",
               "{{root_folder}}/lib/src/{{feature_name}}/infrastructure/datasources/{{usecase_name.snakeCase}}_datasource.template",
-              "{{root_folder}}/lib/src/{{feature_name}}/data/models",
+              "{{root_folder}}/lib/src/{{feature_name}}/data/models/",
               "{{root_folder}}/lib/src/{{feature_name}}/data/datasources/{{usecase_name.snakeCase}}_datasource_impl.template",
-              "{{root_folder}}/lib/src/{{feature_name}}/presentation/pages",
-              "{{root_folder}}/lib/src/{{feature_name}}/presentation/widgets"
+              "{{root_folder}}/lib/src/{{feature_name}}/presentation/pages/",
+              "{{root_folder}}/lib/src/{{feature_name}}/presentation/widgets/"
             ],
             "markdownDescription": "#### You can use this special keywords to indicates some locations:\n- **{{package_name}}** to get name of your package in pubspec.yaml file;\n- **{{root_folder}}** to first folder of your projetc;\n- **{{custom_folder}}** to clicked folder;\n- **{{feature_name}}** to use the given custom name;\n- **{{usecase_name}}** to use a given usecase name;\n\n #### And you can associate this keywords with this format pattern too as given below:\n- **{{usecase_name.lowerCase}}** to use a given usecase name with lowercase pattern;\n- **{{usecase_name.upperCase}}** to use a given usecase name with UPPERCASE pattern;\n- **{{usecase_name.snakeCase}}** to use a given usecase name with snake_case pattern (indicate to file path names);\n- **{{usecase_name.pascalCase}}** to use a given usecase name with PascalCase pattern (indicate to Class names);\n- **{{usecase_name.camelCase}}**  to use a given usecase name with camelCase pattern (indicate to variables names).\n\n **Ex:** '{{root_folder}}/lib/src/{{feature_name}}/domain/entities'"
           }
